tera/src/snapshot_tests/snapshots/tera__snapshot_tests__lexer__lexer_errors@unexpected_character.txt.snap
---
source: tera/src/snapshot_tests/lexer.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/lexer_inputs/errors/unexpected_character.txt
---
Error {
    kind: SyntaxError(
        ReportError {
            message: "Unexpected character",
            span:  @ 1:3-1:3 (3..3),
            report: "",
        },
    ),
    source: None,
}
