tera/src/snapshot_tests/snapshots/tera__snapshot_tests__lexer__lexer_ok@empty_comment.txt.snap
---
source: tera/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: tera/src/snapshot_tests/lexer_inputs/success/empty_comment.txt
---
[
    CONTENT(""),
]
