tera/src/snapshot_tests/snapshots/tera__snapshot_tests__lexer__lexer_ok@map.txt.snap
---
source: tera/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: tera/src/snapshot_tests/lexer_inputs/success/map.txt
---
[
    TAG_START(false),
    IDENT(set),
    IDENT(value),
    ASSIGN,
    LEFT_BRACE,
    STRING("hello"),
    COLON,
    INTEGER(0),
    COMMA,
    STRING("bob"),
    COLON,
    BOOL(true),
    COMMA,
    STRING("d"),
    COLON,
    IDENT(data),
    RIGHT_BRACE,
    TAG_END(false),
    CONTENT("\n"),
    TAG_START(false),
    IDENT(set),
    IDENT(literal_only),
    ASSIGN,
    LEFT_BRACE,
    STRING("hello"),
    COLON,
    INTEGER(0),
    COMMA,
    STRING("bob"),
    COLON,
    BOOL(true),
    COMMA,
    STRING("d"),
    COLON,
    STRING("data"),
    RIGHT_BRACE,
    TAG_END(false),
]
