tera/src/snapshot_tests/snapshots/tera__snapshot_tests__lexer__lexer_ok@raw2.txt.snap
---
source: tera/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: tera/src/snapshot_tests/lexer_inputs/success/raw2.txt
---
[
    CONTENT("    yaml_test:     "),
]
