tera/src/snapshot_tests/snapshots/tera__snapshot_tests__lexer__lexer_ok@variables.txt.snap
---
source: tera/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: tera/src/snapshot_tests/lexer_inputs/success/variables.txt
---
[
    VARIABLE_START(false),
    STRING("hello"),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    STRING("hello"),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    STRING("hello"),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    STRING("one\ntwo\nthree"),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    INTEGER(1),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    FLOAT(1.0),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    LEFT_BRACKET,
    INTEGER(1),
    COMMA,
    INTEGER(2),
    COMMA,
    INTEGER(3),
    RIGHT_BRACKET,
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    BOOL(true),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    BOOL(false),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    LEFT_BRACE,
    STRING("hello"),
    COLON,
    INTEGER(1),
    COMMA,
    STRING("world"),
    COLON,
    BOOL(false),
    RIGHT_BRACE,
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    DOT,
    IDENT(name),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    LEFT_BRACKET,
    IDENT(name),
    RIGHT_BRACKET,
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    LEFT_BRACKET,
    IDENT(name),
    RIGHT_BRACKET,
    DOT,
    IDENT(age),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    LEFT_BRACKET,
    STRING("name"),
    RIGHT_BRACKET,
    DOT,
    IDENT(age),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(persons),
    LEFT_BRACKET,
    INTEGER(0),
    RIGHT_BRACKET,
    DOT,
    IDENT(age),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    LT,
    IDENT(hello),
    LEFT_PAREN,
    IDENT(body),
    ASSIGN,
    STRING("hey"),
    RIGHT_PAREN,
    DIV,
    GT,
    VARIABLE_END(false),
]
