tera/src/snapshot_tests/snapshots/tera__snapshot_tests__lexer__lexer_ok@ws.txt.snap
---
source: tera/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: tera/src/snapshot_tests/lexer_inputs/success/ws.txt
---
[
    CONTENT("Hello"),
    VARIABLE_START(true),
    INTEGER(1),
    VARIABLE_END(true),
    CONTENT("ho"),
    CONTENT(""),
    CONTENT(""),
]
